bring back select wrap fix it's still sometimes broken on the intial site load but disappears after refresh

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -28,14 +28,14 @@ body {
   box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.32);
 }
 
-//.input-group {
-//  flex-wrap: nowrap !important;
-//}
-//
-//select {
-//  width: 100%;
-//  min-width: 100%;
-//}
+.input-group {
+  flex-wrap: nowrap !important;
+}
+
+select#country-select {
+  width: 100%;
+  min-width: 100%;
+}
 
 .template {
   display: none !important;
